--- a/src/contexts/language/langBR.json
+++ b/src/contexts/language/langBR.json
@@ -366,7 +366,7 @@
     "phoneNumber": "(85) 3311-9292",
     "socialMedia": {
       "WhatsApp": {
-        "text": "&text=Ol%C3%A1,%20cheguei%20aqui%20atrav%C3%A9s%20do%20site.%20Poderia%20me%20ajudar?"
+        "text": "&text=Ol%C3%A1%20gostaria%20de%20saber%20mais%20sobre%20o%20Box%20que%20est%C3%A1%20para%20venda%2Falugar!"
       },
       "Instagram": {
         "text": ""
