--- a/src/contexts/language/langEN.json
+++ b/src/contexts/language/langEN.json
@@ -366,7 +366,7 @@
     "phoneNumber": "+55 (85) 3311-9292",
     "socialMedia": {
       "WhatsApp": {
-        "text": "&text=Hi,%20I%20got%20here%20from%20the%20website.%20Would%20you%20help%20me?"
+        "text": "&text=Hi%2C%20I%20would%20like%20to%20know%20more%20about%20the%20Box%20that%20is%20for%20sale%2Frent!"
       },
       "Instagram": {
         "text": ""
