--- a/src/contexts/language/langBR.json
+++ b/src/contexts/language/langBR.json
@@ -49,6 +49,11 @@
     "title": "404",
     "description": "Página Não Encontrada."
   },
+  "box": {
+    "title": "VENDO OU ALUGO BOX NO CENTRO FASHION",
+    "subTitle": "Compre ou alugue este box para o seu negócio!",
+    "sector": "Box está localizado no setor VERDE, o mais movimentado do Centro Fashion."
+  },
   "contact": {
     "title": "CONTATO",
     "company": "JL BUSINESS",
