--- a/src/contexts/language/langEN.json
+++ b/src/contexts/language/langEN.json
@@ -49,6 +49,11 @@
     "title": "404",
     "description": "Page Not Found."
   },
+  "box": {
+    "title": "'CENTRO FASHION FORTALEZA' BOX FOR RENT/SALE",
+    "subTitle": "Rent or buy a box for your business!",
+    "sector": "Box is located in the sector GREEN, the most important sector of the CENTRO FASHION."
+  },
   "contact": {
     "title": "CONTACT",
     "company": "JL BUSINESS",
